// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waypoint get destination waypoint from distance and bearing 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      1.414172,
      1,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitudeReference": "WGS84",
  },
  "type": "Waypoint",
}
`;

exports[`waypoint is exported as GeoJSON Position, or Point & Feature 1`] = `
Array [
  1.123457,
  1.123457,
  1235,
]
`;

exports[`waypoint is exported as GeoJSON Position, or Point & Feature 2`] = `
Object {
  "coordinates": Array [
    1.123457,
    1.123457,
    1235,
  ],
  "type": "Point",
}
`;

exports[`waypoint is exported as GeoJSON Position, or Point & Feature 3`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      1.123457,
      1.123457,
      1235,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitudeReference": "WGS84",
    "name": "Echo",
    "notes": "Some note",
  },
  "type": "Feature",
}
`;

exports[`waypoint is exported as JSON object 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      1.123457,
      1.123457,
      1235,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitudeReference": "WGS84",
    "name": "Echo",
    "notes": "Some note",
  },
  "type": "Waypoint",
}
`;
